fix: change spacing

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -1,5 +1,5 @@
 .home-content {
-  max-width: 840px;
+  max-width: 900px;
   margin: 0 auto;
   margin-top: 64px;
   font-size: 24px;
@@ -11,7 +11,7 @@
 }
 
 .home-content > p {
-  line-height: 1.35;
+  line-height: 1.3;
 }
 
 .content-block {
